[package]
name = "iot-rust-nostd"
version = "0.1.0"
authors = ["EphraimShikanga <ephraimshikanga@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "iot-rust-nostd"
path = "src/main.rs"
test = false
doctest = false
bench = false


[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = [ "esp32", "log" ] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32", "integrated-timers"] }
embassy-executor = { version = "0.5.0" , features = ["task-arena-size-40960", "integrated-timers"]}
embassy-time = { version = "0.3.2" }
embassy-time-driver = { version = "0.1.0", optional = true }
embassy-futures     = "0.1.1"
embedded-io-async   = "0.6.1"
static_cell = { version = "2.1.0", features = ["nightly"] }
esp-println = { version = "0.10.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.7.1", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi",
    "async",
    "embassy-net",
    "wifi-default",
]}
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

[features]
async = ["esp-hal/async",]
embassy-generic-timers = ["embassy-time/generic-queue-8"]


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
